added: simple circle, target circle

--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html>
 <head>
 	<title>Creativity with d3.js</title>
+	<link type="text/css" href="assets/css/materialize.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script src="assets/js/d3.min.js"></script>
+	
 </head>
 <body>
- <header>
+ <div class="container" id="container">
  	<h1>Be creative</h1>
- </header>
+ 	<div class="row">
+ 		<div class="col s3" id="simplecircle">
+ 			<p>Simple Circle</p>
+ 		</div>
+ 		<div class="col s3" id="targetcircle">
+ 			<p>Target Circle</p>
+ 		</div>
+ 	</div>
+ 	
+ </div>
+<script src="assets/js/init.js"></script>
 </body>
 </html>
