added: four circles together of square's co-ordinates

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
  		<div class="col s3" id="targetcircle">
  			<p>Target Circle</p>
  		</div>
+ 		<div class="col s3" id="fourcircle">
+ 			<p>Four Circle</p>
+ 		</div>
  	</div>
  	
  </div>
