--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
  <div class="container" id="container">
  	<h1>Be creative</h1>
  	<div class="row">
- 		<div class="col s3" id="simplecircle">
+ 		<div class="col l3 m4 s6" id="simplecircle">
  			<p>Simple Circle</p>
  		</div>
- 		<div class="col s3" id="targetcircle">
+ 		<div class="col l3 m4 s6 " id="targetcircle">
  			<p>Target Circle</p>
  		</div>
- 		<div class="col s3" id="fourcircle">
+ 		<div class="col l3 m4 s6" id="fourcircle">
  			<p>Four Circle</p>
  		</div>
  	</div>
