--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
  		<div class="col l3 m4 s6" id="fourcircle">
  			<p>Four Circle</p>
  		</div>
+ 		<div class="col l3 m4 s6" id="microsoftlogo">
+ 			<p>Microsoft Logo</p>
+ 		</div>
  	</div>
  	
  </div>
